syntax = "proto3";

package edge.v1;

option go_package = "github.com/haasonsaas/nexus/pkg/proto/edge;edge";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// =============================================================================
// Edge Service
// =============================================================================

// EdgeService enables edge daemons to connect to the Nexus gateway,
// register their tools, and execute tool calls.
service EdgeService {
  // Connect establishes a bidirectional stream for edge daemon communication.
  // The edge daemon uses this to register tools and receive tool execution requests.
  rpc Connect(stream EdgeMessage) returns (stream GatewayMessage);

  // Heartbeat sends a keepalive and status update without a full stream.
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);

  // RegisterTools registers tools from an edge daemon (unary alternative).
  rpc RegisterTools(RegisterToolsRequest) returns (RegisterToolsResponse);
}

// =============================================================================
// Bidirectional Stream Messages
// =============================================================================

// EdgeMessage represents messages sent from edge daemon to gateway.
message EdgeMessage {
  oneof message {
    // Initial authentication and registration
    AuthenticateRequest authenticate = 1;
    RegisterToolsRequest register_tools = 2;

    // Tool execution responses
    ToolExecutionResult tool_result = 3;
    ToolExecutionProgress tool_progress = 4;

    // Status updates
    EdgeStatusUpdate status_update = 5;
    HeartbeatRequest heartbeat = 6;
  }
}

// GatewayMessage represents messages sent from gateway to edge daemon.
message GatewayMessage {
  oneof message {
    // Authentication response
    AuthenticateResponse authenticate = 1;
    RegisterToolsResponse register_ack = 2;

    // Tool execution requests
    ToolExecutionRequest tool_request = 3;
    ToolExecutionCancel tool_cancel = 4;

    // Gateway updates
    GatewayStatusUpdate status_update = 5;
    HeartbeatResponse heartbeat = 6;

    // Errors
    ErrorResponse error = 7;
  }
}

// =============================================================================
// Authentication Messages
// =============================================================================

// AuthenticateRequest authenticates the edge daemon with the gateway.
message AuthenticateRequest {
  // Unique identifier for this edge device/daemon
  string edge_id = 1;

  // Human-readable name for the edge device
  string edge_name = 2;

  // Authentication method
  AuthMethod auth_method = 3;

  // Shared secret for pre-shared key auth
  string shared_secret = 4;

  // TOFU public key for trust-on-first-use
  bytes public_key = 5;

  // Device capabilities and metadata
  EdgeCapabilities capabilities = 6;

  // Protocol version for compatibility checking
  string protocol_version = 7;

  // Signature of challenge for TOFU verification (second step)
  bytes signature = 8;
}

enum AuthMethod {
  AUTH_METHOD_UNSPECIFIED = 0;
  AUTH_METHOD_SHARED_SECRET = 1;  // Pre-shared key
  AUTH_METHOD_TOFU = 2;           // Trust-on-first-use with public key
  AUTH_METHOD_CERTIFICATE = 3;    // mTLS certificate
}

message AuthenticateResponse {
  bool success = 1;

  // Session token for subsequent requests (if not using streaming)
  string session_token = 2;

  // Trust level assigned to this edge
  TrustLevel trust_level = 3;

  // Error details if authentication failed
  string error_message = 4;
  ErrorCode error_code = 5;

  // Gateway capabilities and requirements
  GatewayCapabilities gateway_capabilities = 6;

  // Challenge for TOFU verification (must be signed with private key)
  bytes challenge = 7;
}

enum TrustLevel {
  TRUST_LEVEL_UNSPECIFIED = 0;
  TRUST_LEVEL_UNTRUSTED = 1;      // Requires approval for each tool use
  TRUST_LEVEL_TOFU = 2;           // Trust-on-first-use, pending verification
  TRUST_LEVEL_TRUSTED = 3;        // Fully trusted, no approval needed
  TRUST_LEVEL_PRIVILEGED = 4;     // Can access sensitive tools
}

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_AUTH_FAILED = 1;
  ERROR_CODE_INVALID_EDGE_ID = 2;
  ERROR_CODE_PROTOCOL_MISMATCH = 3;
  ERROR_CODE_RATE_LIMITED = 4;
  ERROR_CODE_EDGE_BANNED = 5;
  ERROR_CODE_INTERNAL = 6;
}

// =============================================================================
// Tool Registration Messages
// =============================================================================

// RegisterToolsRequest registers tools provided by the edge daemon.
message RegisterToolsRequest {
  // Edge ID (required for unary RPC, optional if already authenticated via stream)
  string edge_id = 1;

  // Session token (for unary RPC after initial auth)
  string session_token = 2;

  // Tools to register
  repeated EdgeTool tools = 3;

  // Whether to replace all existing tools (true) or merge (false)
  bool replace_all = 4;
}

message RegisterToolsResponse {
  bool success = 1;

  // Number of tools successfully registered
  int32 registered_count = 2;

  // Tools that failed registration with reasons
  repeated ToolRegistrationError errors = 3;

  // Canonical names assigned to registered tools
  repeated string canonical_names = 4;
}

message ToolRegistrationError {
  string tool_name = 1;
  string error_message = 2;
  ToolRegistrationErrorCode error_code = 3;
}

enum ToolRegistrationErrorCode {
  TOOL_REGISTRATION_ERROR_CODE_UNSPECIFIED = 0;
  TOOL_REGISTRATION_ERROR_CODE_NAME_COLLISION = 1;  // Tool name conflicts with existing
  TOOL_REGISTRATION_ERROR_CODE_INVALID_SCHEMA = 2;  // Invalid JSON schema
  TOOL_REGISTRATION_ERROR_CODE_POLICY_DENIED = 3;   // Policy prevents registration
  TOOL_REGISTRATION_ERROR_CODE_QUOTA_EXCEEDED = 4;  // Too many tools from this edge
}

// EdgeTool defines a tool provided by an edge daemon.
message EdgeTool {
  // Tool name (unique within this edge daemon)
  string name = 1;

  // Human-readable description
  string description = 2;

  // JSON Schema for input parameters (as JSON string)
  string input_schema = 3;

  // Tool category for organization
  ToolCategory category = 4;

  // Whether this tool requires user approval
  bool requires_approval = 5;

  // Risk level for policy decisions
  RiskLevel risk_level = 6;

  // Estimated execution time (for UI feedback)
  int32 estimated_duration_ms = 7;

  // Whether this tool supports streaming output
  bool supports_streaming = 8;

  // Additional metadata
  map<string, string> metadata = 9;
}

enum ToolCategory {
  TOOL_CATEGORY_UNSPECIFIED = 0;
  TOOL_CATEGORY_SYSTEM = 1;       // System access (files, processes)
  TOOL_CATEGORY_HARDWARE = 2;     // Hardware access (camera, sensors)
  TOOL_CATEGORY_NETWORK = 3;      // Network operations
  TOOL_CATEGORY_COMMUNICATION = 4; // Messaging, notifications
  TOOL_CATEGORY_DATA = 5;         // Data processing
  TOOL_CATEGORY_AUTOMATION = 6;   // Scripts, workflows
  TOOL_CATEGORY_CUSTOM = 7;       // User-defined
}

enum RiskLevel {
  RISK_LEVEL_UNSPECIFIED = 0;
  RISK_LEVEL_LOW = 1;       // Read-only, no side effects
  RISK_LEVEL_MEDIUM = 2;    // May have side effects, reversible
  RISK_LEVEL_HIGH = 3;      // Significant side effects
  RISK_LEVEL_CRITICAL = 4;  // Destructive or security-sensitive
}

// =============================================================================
// Tool Execution Messages
// =============================================================================

// ToolExecutionRequest asks the edge daemon to execute a tool.
message ToolExecutionRequest {
  // Unique ID for this execution request
  string request_id = 1;

  // The tool to execute (name as registered)
  string tool_name = 2;

  // Input parameters (JSON-encoded)
  string input = 3;

  // Execution context
  ExecutionContext context = 4;

  // Timeout in milliseconds (0 = no timeout)
  int32 timeout_ms = 5;

  // Whether to stream progress updates
  bool stream_progress = 6;

  // Priority level (for queue ordering)
  Priority priority = 7;
}

enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_NORMAL = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_URGENT = 4;
}

message ExecutionContext {
  // Session ID from the conversation
  string session_id = 1;

  // User ID who initiated the request
  string user_id = 2;

  // Agent ID processing the request
  string agent_id = 3;

  // Original message ID that triggered this tool call
  string message_id = 4;

  // Request metadata
  map<string, string> metadata = 5;
}

// ToolExecutionResult returns the result of a tool execution.
message ToolExecutionResult {
  // Request ID this result is for
  string request_id = 1;

  // Whether execution succeeded
  bool success = 2;

  // Tool output (JSON-encoded for structured output, or text)
  string output = 3;

  // Error message if not successful
  string error_message = 4;

  // Error code for programmatic handling
  ToolErrorCode error_code = 5;

  // Execution duration in milliseconds
  int32 duration_ms = 6;

  // Resource usage statistics
  ResourceUsage resource_usage = 7;

  // Output attachments (files, images, etc.)
  repeated ToolAttachment attachments = 8;
}

enum ToolErrorCode {
  TOOL_ERROR_CODE_UNSPECIFIED = 0;
  TOOL_ERROR_CODE_NOT_FOUND = 1;       // Tool not registered
  TOOL_ERROR_CODE_INVALID_INPUT = 2;   // Input validation failed
  TOOL_ERROR_CODE_TIMEOUT = 3;         // Execution timed out
  TOOL_ERROR_CODE_CANCELLED = 4;       // Execution was cancelled
  TOOL_ERROR_CODE_PERMISSION = 5;      // Permission denied on edge
  TOOL_ERROR_CODE_RESOURCE = 6;        // Resource unavailable
  TOOL_ERROR_CODE_INTERNAL = 7;        // Internal tool error
}

message ResourceUsage {
  int64 cpu_time_ms = 1;
  int64 memory_bytes = 2;
  int64 network_bytes_sent = 3;
  int64 network_bytes_received = 4;
  int64 disk_read_bytes = 5;
  int64 disk_write_bytes = 6;
}

message ToolAttachment {
  string name = 1;
  string mime_type = 2;
  bytes data = 3;           // Inline data (for small attachments)
  string url = 4;           // URL for retrieval (for large attachments)
  int64 size = 5;
}

// ToolExecutionProgress reports progress during long-running tool execution.
message ToolExecutionProgress {
  // Request ID this progress is for
  string request_id = 1;

  // Progress percentage (0-100)
  int32 progress_percent = 2;

  // Human-readable status message
  string status_message = 3;

  // Partial output (for streaming)
  string partial_output = 4;

  // Estimated time remaining in milliseconds
  int32 estimated_remaining_ms = 5;
}

// ToolExecutionCancel requests cancellation of an in-progress execution.
message ToolExecutionCancel {
  // Request ID to cancel
  string request_id = 1;

  // Reason for cancellation
  string reason = 2;
}

// =============================================================================
// Status Messages
// =============================================================================

// EdgeCapabilities describes what an edge daemon can do.
message EdgeCapabilities {
  // Maximum concurrent tool executions
  int32 max_concurrent_executions = 1;

  // Supported tool categories
  repeated ToolCategory supported_categories = 2;

  // Device information
  DeviceInfo device_info = 3;

  // Whether the edge supports streaming output
  bool supports_streaming = 4;

  // Maximum input size in bytes
  int64 max_input_size = 5;

  // Maximum output size in bytes
  int64 max_output_size = 6;
}

message DeviceInfo {
  string os = 1;               // Operating system
  string os_version = 2;       // OS version
  string architecture = 3;     // CPU architecture
  string hostname = 4;         // Device hostname
  int64 memory_bytes = 5;      // Total memory
  int32 cpu_cores = 6;         // CPU core count
}

// GatewayCapabilities describes gateway requirements and limits.
message GatewayCapabilities {
  // Protocol version
  string protocol_version = 1;

  // Maximum tools per edge
  int32 max_tools_per_edge = 2;

  // Maximum execution timeout
  int32 max_timeout_ms = 3;

  // Required heartbeat interval
  int32 heartbeat_interval_ms = 4;

  // Supported auth methods
  repeated AuthMethod supported_auth_methods = 5;
}

// EdgeStatusUpdate reports edge daemon status to gateway.
message EdgeStatusUpdate {
  // Current status
  EdgeStatus status = 1;

  // Number of active tool executions
  int32 active_executions = 2;

  // Queue depth (pending executions)
  int32 queue_depth = 3;

  // System load (0.0 - 1.0+)
  float system_load = 4;

  // Available memory bytes
  int64 available_memory = 5;

  // Uptime in seconds
  int64 uptime_seconds = 6;

  // Tool-specific status
  map<string, string> tool_status = 7;
}

enum EdgeStatus {
  EDGE_STATUS_UNSPECIFIED = 0;
  EDGE_STATUS_READY = 1;         // Ready to accept tool calls
  EDGE_STATUS_BUSY = 2;          // At capacity, may queue
  EDGE_STATUS_OVERLOADED = 3;    // Overloaded, rejecting new calls
  EDGE_STATUS_MAINTENANCE = 4;   // In maintenance mode
  EDGE_STATUS_SHUTTING_DOWN = 5; // Graceful shutdown in progress
}

// GatewayStatusUpdate informs edge about gateway state.
message GatewayStatusUpdate {
  // Gateway is accepting requests
  bool accepting_requests = 1;

  // Maintenance window info
  MaintenanceWindow maintenance = 2;

  // Configuration updates
  map<string, string> config_updates = 3;
}

message MaintenanceWindow {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
  string message = 3;
}

// =============================================================================
// Heartbeat Messages
// =============================================================================

message HeartbeatRequest {
  string edge_id = 1;
  string session_token = 2;
  google.protobuf.Timestamp timestamp = 3;

  // Optional status update with heartbeat
  EdgeStatusUpdate status = 4;
}

message HeartbeatResponse {
  google.protobuf.Timestamp timestamp = 1;

  // Interval before next heartbeat expected (ms)
  int32 next_heartbeat_ms = 2;

  // Whether session is still valid
  bool session_valid = 3;
}

// =============================================================================
// Error Response
// =============================================================================

message ErrorResponse {
  ErrorCode code = 1;
  string message = 2;
  google.protobuf.Struct details = 3;

  // Whether this error is recoverable
  bool recoverable = 4;

  // Suggested retry delay in milliseconds
  int32 retry_after_ms = 5;
}
